--- a/_layouts/essay.html
+++ b/_layouts/essay.html
@@ -2,8 +2,9 @@
 layout: essays
 ---
 
-<div style="margin-top: 20px; margin-bottom: 20px" class="ui text container">
+<div style="margin-top: 300px; margin-bottom: 20px" class="ui text container">
   <h1>{{ page.title }}</h1>
+  <main>Hola soy un main</main>
   <span class="date">{{ page.date | date_to_string }}</span>
   <hr>
   {{ content }}
