--- a/_layouts/essay.html
+++ b/_layouts/essay.html
@@ -4,6 +4,8 @@ layout: essays
 
 <div style="margin-top: 20px; margin-bottom: 20px" class="ui text container">
   <h1>{{ page.title }}</h1>
+  <h2>hola mundo</h2>
+  <main>creando conflicto</main>
   <span class="date">{{ page.date | date_to_string }}</span>
   <hr>
   {{ content }}
